# PicoWeather

./: CMakeLists.txt  README.md  build.sh  lwipopts.h  weather.c
.github/workflows/: ci.yml
drivers/: bme280.c  bme280.h  ccs811.c  ccs811.h  ft6x36.c  ft6x36.h  ili9341.c  ili9341.h
https_client/: https_client.c  https_client.h
jsmn/: json.c  json.h
lvgl/: CMakeLists.txt  lv_conf.h
min_max/: min_max.c  min_max.h
storage/: storage.c  storage.h
temperature_sensor/: temperature_sensor.c  temperature_sensor.h
ui/: ui.c  ui.h
